# SpeedFun

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
Assets/CinematicCameras/: autocamera.txt
Assets/Data/: LoadingScreen.lua  MainMenu.lua
Assets/Levels/: 02 - City.json  03 - Adam Test.json  05 - Swing Swing.json  06 - Towers.json  08 - Hall.json  11 - Monkey Bars.json  DesertBus.json  ExampleLevel.json  Level 3 - New Test.json  MatthewsLevel.json  MedalTest.json  MeshedLevel.json  Owen's_Magnus.json  Spring City.json  The Climb.json  Wall Moment.json  adamtest.json  asfsad.json  dbtest.json  debuglvl.json  debuglvl1.json  finaltest.json  level 2.json  level.json  level2.json  level3.json  level6.json  newTest.json  newTestLeveling.json  sillylevel.json  test.txt  wallMoment.json  woahcool.json
Assets/Lua/: MainMenu.lua  hehe.lua
Assets/Meshes/: Door.mat  Door.msh  GroundPlate.mat  GroundPlate.msh  Male_Guard.mat  Player.mat  Player.msh  Player1.mat  Player2.mat  Player3.mat  Player4.mat  Player_Fall.anm  Player_FastRun.anm  Player_Grapple.anm  Player_Idle.anm  Player_LeftStrafe.anm  Player_RightStrafe.anm  Player_RunBack.anm  Player_Win.anm  Quad.msh  Rig_Maximilian.mat  arch.mat  arch.msh  iron-fence.mtl  paltform-small.mtl  pipesupphigh.mtl  platform.mat  platform.msh  stone_tallA.mtl  tower-square-window.mtl  wall.mtl  wallNarrowCen.mtl
Assets/Shaders/: Buffer.frag  CombineFrag.frag  InstancedParticle.frag  InstancedParticle.vert  Player.frag  fireUI.frag  (+30 more)
CSC8503CoreClasses/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Debug.cpp  Debug.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameStateBusy.cpp  GameStateBusy.h  GameStateInGameplay.h  GameStateInGamplay.cpp  GameStateInactive.cpp  GameStateInactive.h  GameStateLoading.cpp  GameStateLoading.h  GameStateMenu.cpp  GameStateMenu.h  GameStateRunning.cpp  GameStateRunning.h  GameStateWaitingPlayers.cpp  GameStateWaitingPlayers.h  GameWorld.cpp  GameWorld.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  QuadTree.h  Ray.h  RenderObject.cpp  RenderObject.h  SoundSystem.cpp  (+6 more)
Client/: CMakeLists.txt  CinematicCamera.cpp  CinematicCamera.h  Client.cpp  Client.h  ClientGameStateMachine.cpp  ClientGameStateMachine.h  ClientMachine.cpp  ClientMachine.h  ClientNetworkData.cpp  ClientNetworkData.h  ClientThread.cpp  ClientThread.h  DebugMode.cpp  DebugMode.h  Font.cpp  Font.h  GameClient.cpp  GameClient.h  GameStateInGameplay.h  GameStateInGamplay.cpp  GameStateInactive.cpp  GameStateInactive.h  GameStateLoading.cpp  GameStateLoading.h  GameStateMenu.cpp  GameStateMenu.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  SoundManager.cpp  SoundManager.h  TutorialGame.cpp  TutorialGame.h  TweenManager.cpp  TweenManager.h  main.cpp  (+1 more)
Client/States/: GameStateInGameplay.cpp  GameStateInGameplay.h  GameStateInactive.h  GameStateLoading.cpp  GameStateLoading.h  GameStateMenu.cpp  GameStateMenu.h  GameplayState.cpp  GameplayState.h  InactiveState.cpp  InactiveState.h  LoadingState.cpp  LoadingState.h  MenuState.cpp  MenuState.h
Client/UI/: Canvas.cpp  Canvas.h  CanvasLayer.cpp  CanvasLayer.h  Element.cpp  Element.h  HUDElement.cpp  HUDElement.h  TextData.h  UIDim.h
NCLCoreClasses/: Assets.cpp  Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  GameTimer.cpp  Maths.cpp  Maths.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  MeshAnimation.cpp  MeshAnimation.h  MeshGeometry.cpp  MeshGeometry.h  MeshMaterial.cpp  MeshMaterial.h  Mouse.h  Quaternion.cpp  Quaternion.h  RendererBase.h  TextureLoader.cpp  Vector3.h  Win32Window.cpp
NotLua/: CMakeLists.txt  lua.hpp
OpenGLRendering/: CMakeLists.txt  OGLComputeShader.cpp  OGLMesh.cpp  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp
Replicated/: AnimatorObject.cpp  AnimatorObject.h  CMakeLists.txt  ClientGameStateMachine.cpp  ClientGameStateMachine.h  Component.h  DashComponent.cpp  DashComponent.h  EnemyChild.cpp  GrappleComponent.cpp  GrappleComponent.h  InputListener.cpp  InputListener.h  InputSystem.h  LevelBuilder.cpp  LevelBuilder.h  LevelManager.cpp  LevelManager.h  LevelReader.cpp  LevelReader.h  PacketTypes.h  PlayerPhysComponent.cpp  PlayerPhysComponent.h  Replicated.cpp  Replicated.h  SafeQueue.cpp  SafeQueue.h  ServerGameStateMachine.cpp  ServerGameStateMachine.h  StageTimer.cpp  StageTimer.h  TestComponent.h  TriggerVolumeComponent.cpp  TriggerVolumeComponent.h  TriggerVolumeObject.cpp  TriggerVolumeObject.h  json.hpp
Replicated/Components/: SpeedUpBlock.cpp  SwingingObject.cpp  SwingingObject.h  TrapObject.cpp  TrapObject.h  playerHandlerComponent.cpp  playerHandlerComponent.h
Replicated/RayEnemyShoot/: RayEnemyShoot.cpp
Replicated/TrapObject/: TrapObject.cpp  TrapObject.h
Server/: CMakeLists.txt  GameServer.cpp  GameServer.h  Server.cpp  Server.h  ServerGameStateMachine.cpp  ServerMachine.cpp  ServerMachine.h  ServerNetworkData.h  ServerThread.cpp  ServerThread.h  main.cpp
Server/Components/: BridgeTrigger.cpp  BridgeTrigger.h  DamagingObstacle.cpp  DamagingObstacle.h  ObjectOscillator.cpp  ObjectOscillator.h  PlayerMovement.cpp  PlayerMovement.h  PlayerRespawner.h  RayEnemyFollow.cpp  RayEnemyFollow.h  RayEnemyShoot.cpp  RayEnemyShoot.h  SpeedUpBlock.cpp  SpeedUpBlock.h  Spring.cpp  Spring.h  Swinging.cpp  Swinging.h  TestBridge.cpp  TestBridge.h  TrapObject.cpp  TrapObject.h
Server/Levels/: LevelManager.cpp  LevelManager.h  StageTimer.cpp  StageTimer.h
Server/PlayerStates/: GrapplingState.cpp  GrapplingState.h  GroundedState.cpp  GroundedState.h  JumpingState.cpp  JumpingState.h
Server/Scoring/: StageTimer.h
Server/States/: BusyState.cpp  BusyState.h  GameStateBusy.h  GameStateRunning.cpp  GameStateRunning.h  GameStateWaitingPlayers.cpp  GameStateWaitingPlayers.h  RunningState.cpp  RunningState.h  WaitingState.cpp  WaitingState.h
enet/: CMakeLists.txt
raudio/: CMakeLists.txt
studio/: CMakeLists.txt
(+5 files in other folders)
